2015-08-08  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (forward_move_node_structure): Don't go down a 
	menu for a dir node.  (Broken since 2015-07-13 when N_IsInternal 
	ceased to be set for dir nodes.)
	
2015-08-08  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/info-stnd.texi (Cursor Commands): Remove explanation for 
	having cursor movement commands in Info.  Change "have" to "has" 
	and "identical to" to "the same as".

	* doc/info-stnd.texi (Searching Commands, Index Commands): Split
	Searching Commands in two.

	* doc/info-stnd.texi (Top): Re-jig.
	(Stand-alone Info): Change "ASCII terminal" to "text terminal", 
	to cover e.g. UTF-8 and ISO-8859-1.

	* doc/info-stnd.texi (Search Commands): Move mention of 
	'min-search-length' to end.  Remove repeated information about 
	'}' and '{'.  Remove mention that default search string is 
	displayed between '[' and ']'.  Move paragraph about incremental 
	searching to be next to paragraph about non-incremental 
	searching.  Move description of 'search-next' and 
	'search-previous' commands earlier, and mention that regex use 
	(or not) is also maintained.  Remove unnecessary mention that 
	lines in the same node are not skipped.  Rely more on 
	description for 'search-next', and mention that 
	'search-previous' usually goes back to the same match after a 
	'search-next'.
	(Index Commands) <i>: Remove mention of unreliable feature.

	* doc/info-stnd.texi (Search Commands): Document 'tree-search'.
	* info/session.c (info_tree_search_prev, info_tree_search_previous):
	Rename.

2015-08-07  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/variables.c (info_variables): Help string for 
	"follow-strategy".

2015-08-06  Gavin Smith  <gavinsmith0123@gmail.com>

	* TODO: Remove @else, obsolete problem with scrolling to bottom 
	of help, full text search and reference highlighting (both in 
	progress, unnecessary customization of which key to report in 
	help).  Add suggestion for another Info display mode.
